packages/llamafu/android/src/main/cpp/llamafu.h

// Forward declarations
typedef struct Llamafu_s* Llamafu;
// Error codes
typedef enum {
    LLAMAFU_SUCCESS = 0,
    LLAMAFU_ERROR_UNKNOWN = -1,
    LLAMAFU_ERROR_INVALID_PARAM = -2,
    LLAMAFU_ERROR_MODEL_LOAD_FAILED = -3,
    LLAMAFU_ERROR_OUT_OF_MEMORY = -4,
    LLAMAFU_ERROR_MULTIMODAL_NOT_SUPPORTED = -5,
    LLAMAFU_ERROR_LORA_LOAD_FAILED = -6,
    LLAMAFU_ERROR_LORA_NOT_FOUND = -7,
    LLAMAFU_ERROR_GRAMMAR_INIT_FAILED = -8,
    LLAMAFU_ERROR_CONTEXT_INIT_FAILED = -9,
    LLAMAFU_ERROR_TOKENIZATION_FAILED = -10,
    LLAMAFU_ERROR_DECODE_FAILED = -11,

    // Multimodal-specific errors
    LLAMAFU_ERROR_IMAGE_LOAD_FAILED = -20,
    LLAMAFU_ERROR_IMAGE_FORMAT_UNSUPPORTED = -21,
    LLAMAFU_ERROR_IMAGE_DECODE_FAILED = -22,
    LLAMAFU_ERROR_IMAGE_ENCODE_FAILED = -23,
    LLAMAFU_ERROR_IMAGE_RESIZE_FAILED = -24,
    LLAMAFU_ERROR_IMAGE_VALIDATION_FAILED = -25,
    LLAMAFU_ERROR_BASE64_DECODE_FAILED = -26,
    LLAMAFU_ERROR_BASE64_ENCODE_FAILED = -27,
    LLAMAFU_ERROR_FILE_NOT_FOUND = -28,
    LLAMAFU_ERROR_FILE_READ_FAILED = -29,
    LLAMAFU_ERROR_VISION_INIT_FAILED = -30,
    LLAMAFU_ERROR_VISION_PROCESS_FAILED = -31,
    LLAMAFU_ERROR_IMAGE_TOO_LARGE = -32,
    LLAMAFU_ERROR_IMAGE_TOO_SMALL = -33,
    LLAMAFU_ERROR_INVALID_DIMENSIONS = -34,
    LLAMAFU_ERROR_BATCH_PROCESS_FAILED = -35,
    LLAMAFU_ERROR_ABORTED = -36,
} LlamafuError;
// Model parameters - simplified for FFI compatibility
typedef struct {
    const char* model_path;           // Path to model file
    const char* mmproj_path;          // Multi-modal projector path (optional)
    int32_t n_threads;                // Number of threads (-1 = auto)
    int32_t n_ctx;                    // Context size
    uint8_t use_gpu;                  // Whether to use GPU (0 = no, 1 = yes)
} LlamafuModelParams;
// Inference parameters (enhanced)
typedef struct {
    const char* prompt;
    int32_t max_tokens;

    // Basic sampling
    float temperature;
    int32_t top_k;
    float top_p;
    float min_p;
    float typical_p;

    // Penalties
    float repeat_penalty;
    int32_t repeat_last_n;
    float frequency_penalty;
    float presence_penalty;

    // Advanced sampling
    bool penalize_nl;                 // Penalize newlines
    bool ignore_eos;                  // Ignore EOS token

    // Mirostat
    int32_t mirostat;                 // 0 = disabled, 1 = v1, 2 = v2
    float mirostat_tau;               // Target entropy
    float mirostat_eta;               // Learning rate

    // Seed and determinism
    uint32_t seed;

    // Grammar (optional)
    const char* grammar_str;
    const char* grammar_root;
} LlamafuInferParams;
// Enhanced streaming callbacks
typedef void (*LlamafuStreamCallback)(const char* token, void* user_data);
void llamafu_free(Llamafu llamafu);
//
// TEXT GENERATION API (Legacy/Simple)
//

LlamafuError llamafu_complete(
    Llamafu llamafu,
    LlamafuInferParams* params,
    char** out_result
);
LlamafuError llamafu_complete_stream(
    Llamafu llamafu,
    LlamafuInferParams* params,
    LlamafuStreamCallback callback,
    void* user_data
);
// Poll the stream for the next token.
// Returns LLAMAFU_SUCCESS and allocates *out_token if a token is available.
// Returns LLAMAFU_ERROR_ABORTED when the stream has completed (no more tokens).
// Returns LLAMAFU_ERROR_UNKNOWN if the stream is still generating (no token yet).
// *out_completed is set to true when generation is fully done.
// The caller must free *out_token with llamafu_free_string.
LlamafuError llamafu_read_stream_token(
    Llamafu llamafu,
    char** out_token,
    bool* out_completed
);
//
// UTILITY FUNCTIONS
//

void llamafu_free_string(char* str);